<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Include Top Navbar -->
        <include
            android:id="@+id/top_navbar"
            layout="@layout/top_navbar_with_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Title -->
        <TextView
            android:id="@+id/yourProfileTitle"
            style="@style/TextHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            android:text="Your Profile"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Content area between the top and bottom navbars -->
        <LinearLayout
            android:id="@+id/content_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/top_navbar"
            app:layout_constraintBottom_toTopOf="@id/bottom_navbar"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/default_profile"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>

            <Button
                android:id="@+id/upload_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Upload Photo"
                android:textColor="@color/buttonTextColor"
                android:backgroundTint="@color/buttonPrimary"
                app:cornerRadius="@dimen/button_corner_radius" />

            <Button
                android:id="@+id/remove_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Remove Photo"
                android:textColor="@color/textColorOnSecondary"
                android:backgroundTint="@color/white"
                app:cornerRadius="@dimen/button_corner_radius" />

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="phone"
                tools:ignore="HardcodedText" />

            <Switch
                android:id="@+id/notifications_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enable Notifications"
                tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

<!--            <Button-->
<!--                android:id="@+id/back_to_hub_button"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textColor="@color/textColorOnPrimary"-->
<!--                android:backgroundTint="@color/buttonPrimary"-->
<!--                android:layout_marginTop="@dimen/medium_margin"-->
<!--                android:layout_marginStart="@dimen/medium_margin"-->
<!--                android:layout_marginEnd="@dimen/medium_margin"-->
<!--                android:padding="10dp"-->
<!--                app:cornerRadius="@dimen/button_corner_radius"-->
<!--                android:text="Back"-->
<!--                tools:ignore="HardcodedText" />-->
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/buttonPrimary"
            android:padding="10dp"
            android:text="Save"
            android:textColor="@color/textColorOnPrimary"
            app:cornerRadius="@dimen/button_corner_radius"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            app:layout_constraintBottom_toBottomOf="@+id/content_area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText" />

        <!-- Include Bottom Navbar -->
        <include
            android:id="@+id/bottom_navbar"
            layout="@layout/bottom_navbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation Drawer Menu -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
