<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/white">

    <!-- Menu Button -->
    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="Back"
        android:src="@drawable/menu_icon" />

    <!-- App Logo -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/app_logo" />

    <!-- Notification Icon -->
    <ImageButton
        android:id="@+id/notification_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:contentDescription="Notifications"
        android:src="@drawable/notifications_icon" />

</RelativeLayout>
