<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="8dp">

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/home_40px"
        android:background="@null"
        android:contentDescription="Home"/>

    <ImageButton
        android:id="@+id/qr_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/qr_code_scanner_40px"
        android:background="@null"
        android:contentDescription="QR Scan"/>

    <ImageButton
        android:id="@+id/calendar_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/calendar_month_40px"
        android:background="@null"
        android:contentDescription="Calendar"/>

</LinearLayout>