...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- RecyclerView for Facility List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/facilityRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/facilityListTitle"
        app:layout_constraintBottom_toTopOf="@id/bottom_navbar"
        app:layout_constraintBottom_toBottomOf="parent"
...
